# ci-cd_worker

./: .gitignore  Cargo.toml  error.txt  readme.md
src/: main.rs
