[package]
name = "ci-cd_worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = ">=1.0", features = ["derive"] }
serde_yaml = ">=0.9"
chrono = ">=0.4.33"
log = ">=0.4.21"
log4rs = ">=1.3.0"